Основной сервер: Пройденных тестов: 231 Упавших тестов: 0 Упавших тестов статики: 1